# mlops-coffee-match

./: .gitignore  README.md  matching_plan.md  pyproject.toml  synthetic_participants.csv
.cursor/rules/general/: project-overview.mdc
.cursor/rules/python/: python-standards.mdc
data_examples/: matches.csv  matches_enriched.csv  matches_report.md  pairs.csv  synthetic_participants_20250922_145330.csv  synthetic_participants_20250922_151750.csv
matching/: data_models.py  feature_engineering.py  ingest.py  main.py  matcher.py  matching_models.py  recommender.py
scripts/: enrich_matches.py  run_matching.py
synthetic_generation/: gen_synthetic_members.py  synth_models.py
