[project]
name = "mlops-coffee-match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "chromadb>=1.1.0",
    "numpy>=2.3.3",
    "openai>=1.108.0",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pydantic[email]>=2.11.9",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "shortuuid>=1.0.13",
    "tabulate>=0.9.0",
    "typer>=0.19.1",
]
